#ifndef CI_BASESOLVER_HPP
#define CI_BASESOLVER_HPP


class BaseSolver {

};


#endif  // CI_BASESOLVER_HPP
