#ifndef CI_SPARSESOLVER_HPP
#define CI_SPARSESOLVER_HPP


class SparseSolver {

};


#endif  // CI_SPARSESOLVER_HPP
